[tool.poetry]
name = "two-eight"
version = "0.1.0"
description = "Terminal-based productivity manager"
authors = ["Olocool17 <22843298+Olocool17@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "two_eight"}]

[tool.poetry.dependencies]
python = "^3.10"
windows-curses = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
windows-curses = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
